--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@
 gtnh.settings.blowdryerTag = 0.2.2
 
 # Human-readable mod name, available for mcmod.info population.
-modName = MyMod
+modName = ExtraUtilities Portal Fix
 
 # Case-sensitive identifier string, available for mcmod.info population and used for automatic mixin JSON generation.
 # Conventionally lowercase.
-modId = mymodid
+modId = exuportalfix
 
 # Root package of the mod, used to find various classes in other properties,
 # mcmod.info substitution, enabling assertions in run tasks, etc.
-modGroup = com.myname.mymodid
+modGroup = net.sxmaa.portalfix
 
 # Whether to use modGroup as the maven publishing group.
 # Due to a history of using JitPack, the default is com.github.GTNewHorizons for all mods.
@@ -50,7 +50,7 @@ enableGenericInjection = true
 # Generate a class with a String field for the mod version named as defined below.
 # If generateGradleTokenClass is empty or not missing, no such class will be generated.
 # If gradleTokenVersion is empty or missing, the field will not be present in the class.
-generateGradleTokenClass = com.myname.mymodid.Tags
+generateGradleTokenClass = net.sxmaa.portalfix.Tags
 
 # Name of the token containing the project's current version to generate/replace.
 gradleTokenVersion = VERSION
@@ -164,7 +164,7 @@ curseForgeRelations =
 # Uncomment this to disable Spotless checks.
 # This should only be uncommented to keep it easier to sync with upstream/other forks.
 # That is, if there is no other active fork/upstream, NEVER change this.
-# disableSpotless = true
+disableSpotless = true
 
 # Uncomment this to disable Checkstyle checks (currently wildcard import check).
 # disableCheckstyle = true
@@ -180,4 +180,3 @@ curseForgeRelations =
 # Whether IDEA should run spotless checks when pressing the Build button.
 # This is meant to be set in $HOME/.gradle/gradle.properties.
 # ideaCheckSpotlessOnBuild = true
-
