--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -34,4 +34,5 @@
  * For more details, see https://docs.gradle.org/8.0.1/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
+    runtimeOnlyNonPublishable(rfg.deobf(project.files("libs/extrautilities-1.2.12.jar")))
 }
